<resources>
    <string name="app_name">VALOPEDIA</string>
    <string name="app_logo">+@string/app_logo</string>
    <string name="desc_valopedia">Valopedia was released\non February 10th 2022</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Agent">Agent</string>
    <string name="Thread">Thread</string>
    <string name="Weapon">Weapon</string>
    <string name="My_profile">My Profile</string>
    <string name="LOGIN">LOGIN</string>
    <string name="GET_STARTED">Get Started</string>
    <string name="Register_Acc">Register Your Account</string>
    <string name="Username">Username</string>
    <string name="tag">#</string>
    <string name="tag_value">XXX</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Cpassword">Confirm Password</string>
    <string name="Register">Register</string>
    <string name="Create_txt">Create Your Account</string>
    <string name="Create">Create Account</string>
    <string name="upload_img">Upload Image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_pass">Change Password</string>
    <string name="edit_username">New Username</string>
    <string name="edit_tag">New Tag</string>
    <string name="change">Change</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Classic">Classic</string>
    <string name="frenzy">Frenzy</string>
    <string name="Ghost">Ghost</string>
    <string name="GoldenGun">Golden Gun</string>
    <string name="Sheriff">Sheriff</string>
    <string name="Shorty">Shorty</string>
    <string name="knife">Tactical Knife</string>
    <string name="Stinger">Stinger</string>
    <string name="Spectre">Spectre</string>
    <string name="Bucky">Bucky</string>
    <string name="Judge">Judge</string>
    <string name="Bulldog">Bulldog</string>
    <string name="Guardian">Guardian</string>
    <string name="Phantom">Phantom</string>
    <string name="Vandal">Vandal</string>
    <string name="Marshal">Marshal</string>
    <string name="Operator">Operator</string>
    <string name="Ares">Ares</string>
    <string name="Odin">Odin</string>
    <string name="title_activity_main_with_nav">MainActivityWithNav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Rafael christo</string>
    <string name="nav_header_subtitle">Rafaelc@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="skin">Skins</string>
    <string name="cretae_thread">Create Thread</string>
    <string name="menu_weapon">Weapon</string>
    <string name="menu_agent">Agent</string>
    <string name="menu_thread">Thread</string>
    <string name="menu_home">Home</string>
    <string-array name="weapon_name">
        <item>Knife</item>
        <item>Classic</item>
        <item>Frenzy</item>
        <item>Ghost</item>
        <item>Sheriff</item>
        <item>Golden Gun</item>
        <item>Shorty</item>
        <item>Stinger</item>
        <item>Spectre</item>
        <item>Bucky</item>
        <item>Judge</item>
        <item>Bulldog</item>
        <item>Guardian</item>
        <item>Phantom</item>
        <item>Vandal</item>
        <item>Marshal</item>
        <item>Operator</item>
        <item>Ares</item>
        <item>Odin</item>
    </string-array>
    <string-array name="weapon_pic_link">
        <item>https://static.wikia.nocookie.net/valorant/images/d/d8/TacticalKnife.png/revision/latest/scale-to-width-down/200?cb=20220306002426</item>
        <item>https://static.wikia.nocookie.net/valorant/images/5/57/Classic.png/revision/latest/scale-to-width-down/130?cb=20220306002125</item>
        <item>https://static.wikia.nocookie.net/valorant/images/f/f1/Frenzy.png/revision/latest/scale-to-width-down/130?cb=20220306002141</item>
        <item>https://static.wikia.nocookie.net/valorant/images/a/ab/Ghost.png/revision/latest/scale-to-width-down/170?cb=20220306002156</item>
        <item>https://static.wikia.nocookie.net/valorant/images/3/3e/Sheriff.png/revision/latest/scale-to-width-down/170?cb=20220306002329</item>
        <item>https://static.wikia.nocookie.net/valorant/images/2/23/GoldenGun.png/revision/latest/scale-to-width-down/170?cb=20210122000812</item>
        <item>https://static.wikia.nocookie.net/valorant/images/7/77/Shorty.png/revision/latest/scale-to-width-down/170?cb=20220306002343</item>
        <item>https://static.wikia.nocookie.net/valorant/images/b/b6/Stinger.png/revision/latest/scale-to-width-down/200?cb=20220306002413</item>
        <item>https://static.wikia.nocookie.net/valorant/images/9/90/Spectre.png/revision/latest/scale-to-width-down/200?cb=20220306002356</item>
        <item>https://static.wikia.nocookie.net/valorant/images/e/eb/Bucky.png/revision/latest/scale-to-width-down/200?cb=20220306002057</item>
        <item>https://static.wikia.nocookie.net/valorant/images/8/8a/Judge.png/revision/latest/scale-to-width-down/200?cb=20220306002225</item>
        <item>https://static.wikia.nocookie.net/valorant/images/0/07/Bulldog.png/revision/latest/scale-to-width-down/200?cb=20220306002110</item>
        <item>https://static.wikia.nocookie.net/valorant/images/f/fd/Guardian.png/revision/latest/scale-to-width-down/200?cb=20220306002211</item>
        <item>https://static.wikia.nocookie.net/valorant/images/e/ec/Phantom.png/revision/latest/scale-to-width-down/200?cb=20220306002314</item>
        <item>https://static.wikia.nocookie.net/valorant/images/5/56/Vandal.png/revision/latest/scale-to-width-down/200?cb=20220306002438</item>
        <item>https://static.wikia.nocookie.net/valorant/images/b/b9/Marshal.png/revision/latest/scale-to-width-down/200?cb=20220306002237</item>
        <item>https://static.wikia.nocookie.net/valorant/images/1/17/Operator.png/revision/latest/scale-to-width-down/200?cb=20220306002302</item>
        <item>https://static.wikia.nocookie.net/valorant/images/0/05/Ares.png/revision/latest/scale-to-width-down/200?cb=20220306002039</item>
        <item>https://static.wikia.nocookie.net/valorant/images/5/58/Odin.png/revision/latest/scale-to-width-down/200?cb=20220306002249</item>
    </string-array>
    <string name="Damage">Damage</string>
    <string name="primary_fire">Primary Fire</string>
    <string name="alt_fire">Alt Fire</string>
    <string name="Row_Description">Name\n\nType\n\nCreds</string>
    <string name="Row_Description_2">Name\n\nType</string>
    <string name="Row_Description_3">Name\n\nType\n\nWall Penetration\n\nLength\n\nFeature</string>
    <string name="PrimaryFire">FireMode\n\nFire Rate\n\nRun Speed\n\nEquip Speed\n\n1st Shot Spread\n\nReload Speed\n\nMagazine\n\nReserve</string>
    <string name="PrimaryFire_Shotgun">FireMode\n\nPellet Count\n\nFire Rate\n\nRun Speed\n\nEquip Speed\n\n1st Shot Spread\n\nReload Speed\n\nMagazine\n\nReserve</string>
    <string name="WallPenetration">Wall Penetration</string>
    <string name="FireMode">Fire Mode</string>
    <string name="RunSpeed">Run Speed</string>
    <string name="EquipSpeed">Equip Speed</string>
    <string name="ReloadSpeed">Reload Speed</string>
    <string name="Magazine">Magazine</string>
    <string name="Reserve">Reserve</string>
    <string name="BurstFire">Burst Fire</string>
    <string name="Feature">Feature(s)</string>
    <string name="Length">Length</string>
    <string name="AlternateFire">Function\n\nPellet Count\n\nFire Rate</string>
    <string name="AlternateFire_2">Function\n\nZoom\n\nFire Rate\n\n\nMove Speed\n\nBurst Fire\n\n1st Shot Spread\n\n Note(s)</string>
    <string name="AlternateFire_3">Function\n\nZoom\n\nFire Rate\n\nMove Speed\n\n1st Shot Spread\n\n Note(s)</string>
    <string name="DetonationDistance">Detonation Distance</string>
    <string name="PelletCount">Pellet Count</string>
    <string name="Function">Function</string>
    <string name="Notes">Note(s)</string>
    <string name="FireRate">Fire Rate</string>
    <string name="MoveSpeed">Move Speed</string>
    <string name="FirstShotSpread">1st Shot Spread</string>
    <string name="Zoom">Zoom</string>
    <string name="knife_desc">: TacticalKnife\n\n: Melee\n\n: 0</string>
    <string name="knife_wallpenetration">: No</string>
    <string name="knife_length">: 46.59 cm</string>
    <string name="knife_damage">0 &#8211; 8 m\n\n<b>Front</b> &#8211; 50/75 (Primary/Alt)\n\n<b>Back</b> &#8211; 100/150 (Primary/Alt)</string>
    <string name="classic_desc">: Classic\n\n: Sidearm\n\n: Free</string>
    <string name="classic_wallpenetration">: Low</string>
    <string name="classic_length">: 30.92</string>
    <string name="classic_damage_1">0 &#8211; 30 m\n\n<b>Head</b> &#8211; 78\n\n<b>Body</b> &#8211; 26\n\n<b>Leg</b> - 22</string>
    <string name="classic_damage_2">30 &#8211; 50 m\n\n<b>Head</b> &#8211; 66\n\n<b>Body</b> &#8211; 22\n\n<b>Leg</b> - 18</string>
    <string name="classic_FireMode">: Semi-Automatic</string>
    <string name="classic_FireRate">: 6.75 rounds/sec</string>
    <string name="classic_RunSpeed">: 5.73 m/sec</string>
    <string name="classic_EquipSpeed">: 0.72 sec</string>
    <string name="classic_ShotSpread">: 0.4 deg</string>
    <string name="classic_ReloadSpeed">: 1.75 sec</string>
    <string name="classic_Magazine">: 12</string>
    <string name="classic_Reserve">: 36[3 magazines]</string>
    <string name="classic_Function">: Shotgun</string>
    <string name="classic_PelletCount">: 3</string>
    <string name="classic_AltFireRate">: 2.22 bursts/sec</string>
    <string name="ghost_desc">: Classic\n\n: Sidearm\n\n: 500</string>
    <string name="ghost_wallpenetration">: Medium</string>
    <string name="ghost_length">: 65.4 cm\n\u0020 39.93 cm without silencer</string>
    <string name="ghost_FireMode">: Semi</string>
    <string name="ghost_FireRate">: 6.75 rounds/sec</string>
    <string name="ghost_RunSpeed">: 5.73 m/sec</string>
    <string name="ghost_EquipSpeed">: 0.75 sec</string>
    <string name="ghost_ShotSpread">: 0.3 deg</string>
    <string name="ghost_ReloadSpeed">: 1.5 sec</string>
    <string name="ghost_Feature">: Silenced\n * Tracers not visible to enemies\n * Firing sound can\'t be heard at 40m+ except in direction of fire</string>
    <string name="ghost_Magazine">: 15</string>
    <string name="ghost_Reserve">: 45[3 magazines]</string>
    <string name="ghost_damage_1">0 &#8211; 30 m\n\n<b>Head</b> &#8211; 105\n\n<b>Body</b> &#8211; 30\n\n<b>Leg</b> - 25</string>
    <string name="ghost_damage_2">30 &#8211; 50 m\n\n<b>Head</b> &#8211; 87\n\n<b>Body</b> &#8211; 25\n\n<b>Leg</b> - 21</string>
    <string name="shorty_desc">: Shorty\n\n: Sidearm\n\n: 150</string>
    <string name="shorty_wallpenetration">: Low</string>
    <string name="shorty_length">: 69 cm</string>
    <string name="shorty_FireMode">: Semi</string>
    <string name="shorty_PelletCount">: 15</string>
    <string name="shorty_FireRate">: 3.33 rounds/sec</string>
    <string name="shorty_RunSpeed">: 5.4 m/sec</string>
    <string name="shorty_EquipSpeed">: 0.75 sec</string>
    <string name="shorty_ShotSpread">: 4 deg</string>
    <string name="shorty_ReloadSpeed">: 1.75 sec</string>
</resources>