<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/valopedia" />

        <ImageView
            android:layout_width="285dp"
            android:layout_height="285dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/valopedia_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/desc_valopedia"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_register_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="25dp"
            android:layout_weight="1"
            android:background="@color/button_getstarted"
            android:maxWidth="200dp"
            android:text="GET STARTED"
            android:textSize="26dp" />

        <Button
            android:id="@+id/button_login_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:background="@android:color/transparent"
            android:text="LOGIN"
            android:textColor="@color/white"
            android:textSize="26dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>